--- a/app/src/main/res/layout/transaction_details_bottom_sheet_dialogue.xml
+++ b/app/src/main/res/layout/transaction_details_bottom_sheet_dialogue.xml
@@ -16,10 +16,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center_horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+            <FrameLayout
+                android:id="@+id/bar"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/rounded"
+                android:layout_width="30dp"
+                android:layout_height="5dp" />
 
             <LinearLayout
                 android:id="@+id/any"
@@ -109,6 +120,41 @@
                     android:textSize="12dp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/resend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/rounded_gray_background"
+                android:orientation="vertical"
+                android:padding="20dp">
+
+                <LinearLayout
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_weight="1"
+                        android:id="@+id/transa_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/googlesans_regular"
+                        android:textSize="15dp"
+                        android:text="Resend Transaction Link" />
+
+                    <ImageView
+                        android:id="@+id/send_trans_image"
+                        android:layout_width="wrap_content"
+                        android:layout_marginEnd="@dimen/margin_20_dp"
+                        android:src="@drawable/ic_send"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/Shipment_status_field"
@@ -116,7 +162,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:hint="@string/shipment_status"
                 android:layout_marginEnd="16dp"
                 android:fontFamily="@font/googlesans_regular"
@@ -143,6 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="@dimen/margin_20_dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/rounded_gray_background"
                 android:orientation="vertical"
@@ -191,7 +238,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primaryColor"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:fontFamily="@font/googlesans_medium"
                 android:text="Update status"
